<resources>
    <string name="app_name">aplikacja_na_ocene</string>
    <string name="zdjecie_img">Wyświetlanie zdjęć</string>
    <string name="nastepny_btn">następne zdjęcie</string>
    <string name="poprzedni_btn">poprzednie zdjecie</string>
    <string name="wyczysc_btn">Wyczysc zdj_img</string>
    <string name="zdj_btn">Wykonaj zdjecie</string>
    <string name="w_czenie_obrazu">Włączenie obrazu</string>
    <string name="nast_pny">następny</string>
    <string name="wyczy">Wyczyść</string>
    <string name="poprzedni">poprzedni</string>
    <string name="powy_ej_wpisz_warto_jakiej_wielko_ci_ma_by_zdjecie">Powyżej wpisz wartość jakiej wielkości ma być zdjecie</string>
    <string name="zapisz">zapisz</string>
</resources>