<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/zdjecie_img"
        android:layout_width="355dp"
        android:layout_height="300dp"
        android:contentDescription="@string/zdjecie_img"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        app:srcCompat="@drawable/zwykly_brek" />

    <ImageButton
        android:id="@+id/poprzedni_btn"
        android:layout_width="123dp"
        android:layout_height="62dp"
        android:contentDescription="@string/poprzedni_btn"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547"
        app:srcCompat="@drawable/lewo"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/nastepny_btn"
        android:layout_width="110dp"
        android:layout_height="63dp"
        android:contentDescription="@string/nastepny_btn"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547"
        app:srcCompat="@drawable/prawo"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/wyczysc_btn"
        android:layout_width="104dp"
        android:layout_height="93dp"
        android:contentDescription="@string/wyczysc_btn"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561"
        app:srcCompat="@drawable/smietnik"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/poprzedni_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/poprzedni"
        app:layout_constraintBottom_toTopOf="@+id/wyczysc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zdjecie_img"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/wyczysc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/wyczy"
        app:layout_constraintBottom_toTopOf="@+id/wyczysc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zdjecie_img"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nastepny_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="7dp"
        android:text="@string/nast_pny"
        app:layout_constraintBottom_toTopOf="@+id/nastepny_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zdjecie_img" />

    <ImageButton
        android:id="@+id/zdjecie_btn"
        android:layout_width="94dp"
        android:layout_height="83dp"
        android:contentDescription="@string/zdj_btn"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wyczysc_btn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/aparat"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/checkbox_schowaj"
        android:layout_width="246dp"
        android:layout_height="75dp"
        android:checked="true"
        android:text="@string/w_czenie_obrazu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <EditText
        android:id="@+id/edit_scale"
        android:layout_width="259dp"
        android:layout_height="98dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toEndOf="@+id/zdjecie_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powy_ej_wpisz_warto_jakiej_wielko_ci_ma_by_zdjecie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <Button
        android:id="@+id/zapisz_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zapisz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

</androidx.constraintlayout.widget.ConstraintLayout>